--- a/style.css
+++ b/style.css
@@ -109,22 +109,15 @@ hr {
   border-radius: 5px;
 }
 
-#mainNav {
+.main-nav {
   background-color: #FFF;
-  padding-bottom  : 0 !important;
-  padding-right   : 0 !important;
+  padding-bottom  : 0;
+  padding-right   : 0;
   position        : relative;
   z-index         : 999;
 }
 
-#mainNav #containerDiv #logoCMS {
-  -webkit-transform: translateY(-10px);
-  transform        : translateY(-10px);
-  margin-right     : 10px;
-  margin-top       : 5px;
-}
-
-#navbarResponsive {
+.stripe {
   min-height               : 4.85em;
   -webkit-transform        : translateY(-0.65em);
   transform                : translateY(-0.65em);
@@ -133,7 +126,7 @@ hr {
   border-bottom-left-radius: 15px;
 }
 
-#navbarResponsive::after {
+.stripe::after {
   content                 : ' ';
   position                : absolute;
   display                 : block;
@@ -150,25 +143,36 @@ hr {
   transform               : skew(10deg, 0deg);
 }
 
-#navbarResponsive ul li {
-  font-size      : 1.4em !important;
-  text-align     : right;
-  list-style-type: none;
-  display        : inline;
-  padding        : 0;
+.hli {
+  font-size         : 1.25em;
+  text-align        : right;
+  list-style-type   : none;
+  display           : inline;
+  padding           : 0;
+  color             : white;
+  -webkit-transition: all ease-in 0.12s;
+  transition        : all ease-in 0.12s;
 }
 
-#navbarResponsive ul li:not(:first-child):before {
+.hli:not(:first-child):before {
   color  : white;
   content: ' | ';
 }
 
-#navbarResponsive ul li a:hover {
-  text-decoration: none;
-  color          : black;
+.hli:hover {
+  color: black;
 }
 
-#solicitarVisita {
+.hli a {
+  display: inline-block;
+  color  : inherit;
+}
+
+.hli a:hover {
+  text-decoration: none;
+}
+
+.make-appointment {
   -webkit-transform        : translateY(-0.1em);
   transform                : translateY(-0.1em);
   height                   : 4.55em;
@@ -179,7 +183,7 @@ hr {
   right                    : 0;
 }
 
-#solicitarVisita::after {
+.make-appointment::after {
   content                 : ' ';
   position                : absolute;
   display                 : block;
@@ -196,17 +200,17 @@ hr {
   transform               : skew(10deg, 0deg);
 }
 
-#solicitarVisita p {
+.make-appointment p {
   font-size: 1.2em;
   position : absolute;
   bottom   : -0.8em;
   right    : 1em;
 }
 
-#secondaryNav {
+/* #secondaryNav {
   position: relative;
   z-index : 998;
-}
+} */
 
 .navbar-supported-content {
   width                : 100%;
@@ -228,12 +232,13 @@ hr {
   padding           : 0.2em 0.5em 0;
   -webkit-transition: all 0.25s;
   transition        : all 0.25s;
-  -webkit-transform : translateY(0.5em);
-  transform         : translateY(0.5em);
+  border            : 1px solid transparent;
 }
 
 .nav-item:hover {
-  cursor: pointer;
+  cursor          : pointer;
+  box-shadow      : 0 0 15px grey;
+  background-color: white;
 }
 
 .nav-item:hover {
@@ -241,48 +246,8 @@ hr {
 }
 
 .nav-item a {
-  text-decoration   : none;
-  cursor            : pointer;
-  -webkit-transition: all 0.25s;
-  transition        : all 0.25s;
-}
-
-/* .nav-item a {
   text-decoration: none;
-  cursor         : pointer;
-}
-
-.nav-item div p {
-  color    : #1f9bde;
-  font-size: 0.9em !important;
-  padding  : 0 0.6em;
-}
-
-.nav-item div button {
-  background: none;
-  color     : inherit;
-  border    : none;
-  padding   : 0;
-  font      : inherit;
-  cursor    : pointer;
-  outline   : inherit;
-}
-
-.nav-item div button:active {
-  background: none;
-  color     : inherit;
-  border    : none;
-  padding   : 0;
-  font      : inherit;
-  cursor    : pointer;
-  outline   : inherit;
-} */
-
-#carousel-photos {
-  max-height         : 500px;
-  background-position: center center;
-  background-repeat  : no-repeat;
-  background-size    : cover;
+  color          : inherit;
 }
 
 .specialty-name {
@@ -302,7 +267,7 @@ hr {
   z-index : 9;
 }
 
-.body-wrapper #block-collaboration-cliniques {
+.collab-cliniques {
   position               : absolute;
   bottom                 : 0;
   right                  : 1em;
@@ -315,7 +280,7 @@ hr {
   text-align             : center;
 }
 
-.body-wrapper #block-collaboration-cliniques #collaboration-cliniques-title {
+.collab-cliniques-title {
   border-top-left-radius : inherit;
   border-top-right-radius: inherit;
   height                 : 2em;
@@ -323,14 +288,14 @@ hr {
   padding-top            : 1em;
 }
 
-.body-wrapper #block-collaboration-cliniques #collaboration-cliniques-separator {
+.collab-cliniques-separator {
   width           : 100%;
   padding         : 0;
   margin          : 0;
   background-color: white;
 }
 
-.body-wrapper #block-collaboration-cliniques #collaboration-cliniques-images {
+.collab-cliniques-images {
   position          : relative;
   bottom            : 0;
   height            : 0;
@@ -343,11 +308,11 @@ hr {
   transition        : opacity 0.2s ease-in-out, transform 0s ease-in-out 0.2s, height 0.2s ease-in-out 0.2s, -webkit-transform 0s ease-in-out 0.2s;
 }
 
-.body-wrapper #block-collaboration-cliniques #collaboration-cliniques-images img {
+.collab-cliniques-images img {
   margin: 1em 0;
 }
 
-.body-wrapper #block-collaboration-cliniques:hover #collaboration-cliniques-images {
+.collab-cliniques:hover .collab-cliniques-images {
   height            : 15.7em;
   -webkit-transform : scaleY(1);
   transform         : scaleY(1);
@@ -369,15 +334,14 @@ hr {
 }
 
 footer {
-  position        : absolute;
-  bottom          : 0;
-  height          : 22vh;
-  background-color: #1f9bde;
-  color           : white;
-  text-align      : center;
-  padding         : 20px 0;
-  display         : block;
-  width           : 100%;
+  position  : absolute;
+  bottom    : 0;
+  height    : 22vh;
+  color     : white;
+  text-align: center;
+  padding   : 20px 0;
+  display   : block;
+  width     : 100%;
 }
 
 footer p {
